[package]
name = "crypto-challenges"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hex = "0.4.3"
base64 = "0.13.1"
openssl = "0.10.42"
reqwest = { version = "0.11", features = ["blocking", "json"] }
error-chain = "0.12.4"